# uuid_v7_udr

./: .editorconfig  CMakeLists.txt  README.md  README_RU.md  uuid_v7.sln
projects/uuid_v7/: release_pack-x64.bat  release_pack-x86.bat  uuid_v7.vcxproj  uuid_v7.vcxproj.filters  write_build_no.bat
sql/: uuid_v7_install.sql  uuid_v7_uninstall.sql
src/: UDR.h  libmain.cpp  udr_build_no.h  uuid_v7_udr.rc
